Add MY-UBUNTU64 to gitignore

--- a/NETWORK/LAB02_2017_10_27_log.md
+++ b/NETWORK/LAB02_2017_10_27_log.md
@@ -1,7 +1,9 @@
 # LAB02
+
 -------------------------------------
 
-# CONNECTIONS:
+## CONNECTIONS:
+
 ```
 - PC01  fa0    -->  SW01  fa0/1  VLAN 2
 - PC02  fa0    -->  SW01  fa0/2  VLAN 2
@@ -35,7 +37,8 @@
 - PROV  fa0/1  -->  MGMT3 fa0    VLAN 5
 ```
 
-# IP
+## IP
+
 ```
 - PC01         IP 10.0.0.2 MASK: 255.255.255.0   GW 10.0.0.1 
 - PC02         IP 10.0.0.3 MASK: 255.255.255.0   GW 10.0.0.1 
@@ -57,7 +60,7 @@
 - PROV         IP 10.0.3.1 MASK: 255.255.255.248 
 ```
 
-# NETWORKS (SUBNETS)
+## NETWORKS (SUBNETS)
 
 - 10.0.0.0/24 - PC
 - 10.0.1.0/24 - SVR
@@ -77,6 +80,7 @@
 - 5 - N1N2
 
 ## SW01
+
 ```
 Set SW01 hostname to SW01
 Create VLAN 2 name PC and VLAN 3 name SVR and vlan 4 name MGMT
@@ -129,6 +133,7 @@ VLAN 2,3,4
 ```
 
 ## SW02
+
 ```
 Set SW02 hostname to SW02
 Create VLAN 2 name PC and VLAN 3 name SVR and vlan 4 name MGMT
@@ -166,6 +171,7 @@ VLAN 4
 ```
 
 ## SW03
+
 ```
 Set SW03 hostname to SW03
 Create VLAN 3 name SVR and vlan 4 name MGMT
@@ -189,6 +195,7 @@ VLAN 2,3,4
 ```
 
 ## SW04
+
 ```
 Set SW04 hostname to SW04
 Create VLAN 2 name PC and VLAN 3 name SVR
@@ -208,6 +215,29 @@ interface fa0/2
 Description SVR04
 access
 VLAN 3
+```
+
+## PROV
+
+```
+Set PROV name to PROV
+Create VLAN 5 name N1N2
+Set spanning-tree mode rapid-pvst
+
+interface gi0/1
+Description GW01
+access
+VLAN 5
+
+interface gi0/2
+Description GW02
+access
+VLAN 5
+
+interface fa0/1
+Description MGMT3
+access
+VLAN 5
 ```
 
 ## GW01
@@ -237,32 +267,10 @@ ip 10.0.2.1 mask: 255.255.255.0
 interface gi0/1.4 
 Description MGMT
 ip 10.0.3.1 mask: 255.255.255.0
-
-```
-
-## PROV
-```
-Set PROV name to PROV
-Create VLAN 5 name N1N2
-Set spanning-tree mode rapid-pvst
-
-interface gi0/1
-Description GW01
-access
-VLAN 5
-
-interface gi0/2
-Description GW02
-access
-VLAN 5
-
-interface fa0/1
-Description MGMT3
-access
-VLAN 5
 ```
 
 ## GW02
+
 ```
 Set GW02 hostname to GW02
 Set time
