--- a/NETWORK/LAB02_2017_10_27_log.md
+++ b/NETWORK/LAB02_2017_10_27_log.md
@@ -252,6 +252,9 @@ VLAN 5
 Set GW01 hostname to GW01
 Set time
 
+Add ACL Servers-out SubInt 0/1.3
+permit tcp by port 80,443 from any to 10.0.1.2 (SVR01)
+
 interface gi0/0.5 
 Description N1N2
 ip 10.0.3.2 mask: 255.255.255.248
