--- a/NETWORK/LAB02_2017_10_27_log.md
+++ b/NETWORK/LAB02_2017_10_27_log.md
@@ -9,6 +9,7 @@
 - PC02  fa0    -->  SW01  fa0/2  VLAN 2
 - PC03  fa0    -->  SW02  fa0/1  VLAN 2
 - PC04  fa0    -->  SW04  fa0/1  VLAN 2
+- ADMIN fa0    -->  SW01  fa0/10 VLAN 2
 - SVR01 fa0    -->  SW01  fa0/3  VLAN 3
 - SVR02 fa0    -->  SW01  fa0/4  VLAN 3
 - SVR03 fa0    -->  SW02  fa0/2  VLAN 3
@@ -252,8 +253,25 @@ VLAN 5
 Set GW01 hostname to GW01
 Set time
 
-Add ACL Servers-out SubInt 0/1.3
-permit tcp by port 80,443 from any to 10.0.1.2 (SVR01)
+Create extended access-list Servers-out
+permit icmp any any
+permit tcp any host 10.0.1.2 eq www
+permit tcp any host 10.0.1.2 eq 443
+permit tcp any host 10.0.1.4 eq ftp
+permit tcp any host 10.0.1.3 eq smtp
+permit tcp any host 10.0.1.3 eq pop3
+permit tcp any host 10.0.1.5 eq domain
+permit tcp host 10.0.0.10 host 10.0.1.2 eq telnet
+permit tcp host 10.0.0.10 host 10.0.1.3 eq telnet
+permit tcp host 10.0.0.10 host 10.0.1.4 eq telnet
+permit tcp host 10.0.0.10 host 10.0.1.5 eq telnet
+permit tcp host 10.0.0.10 host 10.0.1.1 range 20 ftp
+permit tcp host 10.0.0.10 host 10.0.1.2 range 20 ftp
+permit tcp host 10.0.0.10 host 10.0.1.3 range 20 ftp
+permit tcp host 10.0.0.10 host 10.0.1.4 range 20 ftp
+permit tcp host 10.0.0.10 host 10.0.1.5 range 20 ftp
+Create standard access-list 50
+permit host 10.0.0.10
 
 interface gi0/0.5 
 Description N1N2
@@ -266,6 +284,7 @@ ip 10.0.0.1 mask: 255.255.255.0
 interface gi0/1.3 
 Description SVR
 ip 10.0.2.1 mask: 255.255.255.0
+Add ACL Servers-out out
 
 interface gi0/1.4 
 Description MGMT
