--- a/NETWORK/LAB02_2017_10_27_log.md
+++ b/NETWORK/LAB02_2017_10_27_log.md
@@ -280,6 +280,7 @@ ip 10.0.3.2 mask: 255.255.255.248
 interface gi0/1.2 
 Description PC
 ip 10.0.0.1 mask: 255.255.255.0
+Add ACL 50 in
 
 interface gi0/1.3 
 Description SVR
