add language definition

--- a/NETWORK/LAB02_2017_10_27_log.md
+++ b/NETWORK/LAB02_2017_10_27_log.md
@@ -4,7 +4,7 @@
 
 ## CONNECTIONS:
 
-```
+```vscode-cisco-syntax
 - PC01  fa0    -->  SW01  fa0/1  VLAN 2
 - PC02  fa0    -->  SW01  fa0/2  VLAN 2
 - PC03  fa0    -->  SW02  fa0/1  VLAN 2
@@ -29,9 +29,9 @@
 - SW03  fa0/23 -->  SW01  gi0/21 VLAN 2,3,4 |
 - SW03  fa0/24 -->  SW01  gi0/22 VLAN 2,3,4 |
 - SW04  gi0/1  -->  GW02  gi0/1  VLAN 2,3
-- GW01  gi0/1  -->  SW01  gi0/1  
-- GW01  gi0/0  -->  PROV  gi0/1 
-- GW02  gi0/0  -->  PROV  gi0/2 
+- GW01  gi0/1  -->  SW01  gi0/1
+- GW01  gi0/0  -->  PROV  gi0/1
+- GW02  gi0/0  -->  PROV  gi0/2
 - GW02  gi0/1  -->  SW04  gi0/1
 - PROV  gi0/1  -->  GW01  gi0/0  VLAN 5
 - PROV  gi0/2  -->  GW02  gi0/0  VLAN 5
@@ -40,7 +40,8 @@
 
 ## IP
 
-```
+```vscode-cisco-syntax
+
 - PC01         IP 10.0.0.2 MASK: 255.255.255.0   GW 10.0.0.1 
 - PC02         IP 10.0.0.3 MASK: 255.255.255.0   GW 10.0.0.1 
 - PC03         IP 10.0.0.4 MASK: 255.255.255.0   GW 10.0.0.1
@@ -82,7 +83,8 @@
 
 ## SW01
 
-```
+```vscode-cisco-syntax
+
 Set SW01 hostname to SW01
 Create VLAN 2 name PC and VLAN 3 name SVR and vlan 4 name MGMT
 Set spanning-tree mode rapid-pvst
@@ -135,7 +137,7 @@ VLAN 2,3,4
 
 ## SW02
 
-```
+```vscode-cisco-syntax
 Set SW02 hostname to SW02
 Create VLAN 2 name PC and VLAN 3 name SVR and vlan 4 name MGMT
 Set spanning-tree mode rapid-pvst
@@ -173,7 +175,7 @@ VLAN 4
 
 ## SW03
 
-```
+```vscode-cisco-syntax
 Set SW03 hostname to SW03
 Create VLAN 3 name SVR and vlan 4 name MGMT
 Set spanning-tree mode rapid-pvst
@@ -197,7 +199,7 @@ VLAN 2,3,4
 
 ## SW04
 
-```
+```vscode-cisco-syntax
 Set SW04 hostname to SW04
 Create VLAN 2 name PC and VLAN 3 name SVR
 Set spanning-tree mode rapid-pvst
@@ -220,7 +222,7 @@ VLAN 3
 
 ## PROV
 
-```
+```vscode-cisco-syntax
 Set PROV name to PROV
 Create VLAN 5 name N1N2
 Set spanning-tree mode rapid-pvst
@@ -249,7 +251,7 @@ VLAN 5
 - R- RIP
 - M - mobile
 
-```
+```vscode-cisco-syntax
 Set GW01 hostname to GW01
 Set time
 
@@ -273,28 +275,29 @@ permit tcp host 10.0.0.10 host 10.0.1.5 range 20 ftp
 Create standard access-list 50
 permit host 10.0.0.10
 
-interface gi0/0.5 
+interface gi0/0.5
 Description N1N2
 ip 10.0.3.2 mask: 255.255.255.248
 
-interface gi0/1.2 
+interface gi0/1.2
 Description PC
 ip 10.0.0.1 mask: 255.255.255.0
 Add ACL 50 in
 
-interface gi0/1.3 
+interface gi0/1.3
 Description SVR
 ip 10.0.2.1 mask: 255.255.255.0
 Add ACL Servers-out out
 
-interface gi0/1.4 
+interface gi0/1.4
 Description MGMT
 ip 10.0.3.1 mask: 255.255.255.0
 ```
 
 ## GW02
 
-```
+```vscode-cisco-syntax
+
 Set GW02 hostname to GW02
 Set time
 
