--- a/NETWORK/LAB02_2017_10_27_log.md
+++ b/NETWORK/LAB02_2017_10_27_log.md
@@ -4,7 +4,7 @@
 
 ## CONNECTIONS:
 
-```vscode-cisco-syntax
+```cisco
 - PC01  fa0    -->  SW01  fa0/1  VLAN 2
 - PC02  fa0    -->  SW01  fa0/2  VLAN 2
 - PC03  fa0    -->  SW02  fa0/1  VLAN 2
