Delete duplicated sections from log

--- a/NETWORK/LAB02_2017_10_27_log.md
+++ b/NETWORK/LAB02_2017_10_27_log.md
@@ -1,65 +1,118 @@
 # LAB02
 
--------------------------------------
+----------------------------------------
 
-## CONNECTIONS:
+## CONNECTIONS
 
 ```cisco
 - PC01  fa0    -->  SW01  fa0/1  VLAN 2
 - PC02  fa0    -->  SW01  fa0/2  VLAN 2
 - PC03  fa0    -->  SW02  fa0/1  VLAN 2
 - PC04  fa0    -->  SW04  fa0/1  VLAN 2
+
+- MGMT1 fa0    -->  SW01  fa0/24 VLAN 4
+- MGMT2 fa0    -->  SW02  fa0/24 VLAN 4
+- MGMT3 fa0    -->  PROV  fa0/1  VLAN 5
+
 - ADMIN fa0    -->  SW01  fa0/10 VLAN 2
+----------------------------------------
 - SVR01 fa0    -->  SW01  fa0/3  VLAN 3
 - SVR02 fa0    -->  SW01  fa0/4  VLAN 3
 - SVR03 fa0    -->  SW02  fa0/2  VLAN 3
 - SVR04 fa0    -->  SW04  fa0/2  VLAN 3
-- SVR05 fa0    -->  SW03  fa0/1
-- MGMT1 fa0    -->  SW01  fa0/24 VLAN 4
-- MGMT2 fa0    -->  SW02  fa0/24 VLAN 4
-- MGMT3 fa0    -->  PROV  fa0/1  VLAN 5
+- SVR05 fa0    -->  SW03  fa0/1  VLAN 3
+----------------------------------------
 - SW01  gi0/1  -->  GW01  gi0/1  VLAN 2,3,4
 - SW01  gi0/2  -->  SW02  gi0/2  VLAN 2,3,4
+- SW01  fa0/1  -->  PC01  fa0    VLAN 2
+- SW01  fa0/2  -->  PC02  fa0    VLAN 2
+- SW01  fa0/3  -->  SVR01 fa0    VLAN 3
+- SW01  fa0/4  -->  SVR02 fa0    VLAN 3
+- SW01  fa0/10 -->  ADMIN fa0    VLAN 2
+- SW01  fa0/24 -->  MGMT1 fa0    VLAN 4
+
 - SW02  gi0/2  -->  SW01  gi0/2  VLAN 2,3,4
 - SW02  gi0/1  -->  SW03  gi0/1  VLAN 3,4
+- SW02  fa0/1  -->  PC03  fa0    VLAN 2
+- SW02  fa0/24 -->  MGMT2 fa0    VLAN 4
+
 - SW03  gi0/1  -->  SW02  gi0/1  VLAN 3,4
-- SW03  fa0/20 -->  SW01  gi0/18 VLAN 2,3,4 |
-- SW03  fa0/21 -->  SW01  gi0/19 VLAN 2,3,4 |
-- SW03  fa0/22 -->  SW01  gi0/20 VLAN 2,3,4 | - channel group 1
-- SW03  fa0/23 -->  SW01  gi0/21 VLAN 2,3,4 |
-- SW03  fa0/24 -->  SW01  gi0/22 VLAN 2,3,4 |
+- SW03  fa0/1  -->  SVR05 fa0    VLAN 3
+
 - SW04  gi0/1  -->  GW02  gi0/1  VLAN 2,3
+- SW04  fa0/1  -->  PC04  fa0    VLAN 2
+- SW04  fa0/2  -->  SVR04 fa0    VLAN 3
+----------------------------------------
 - GW01  gi0/1  -->  SW01  gi0/1
 - GW01  gi0/0  -->  PROV  gi0/1
 - GW02  gi0/0  -->  PROV  gi0/2
 - GW02  gi0/1  -->  SW04  gi0/1
-- PROV  gi0/1  -->  GW01  gi0/0  VLAN 5
-- PROV  gi0/2  -->  GW02  gi0/0  VLAN 5
-- PROV  fa0/1  -->  MGMT3 fa0    VLAN 5
+
+----------------------------------------
+----------------------------------------
+
+- bank1.ua     -->  PROV2 fa0/1
+- bank2.ua     -->  PROV2 fa0/2
+- db.ua        -->  PROV2 fa0/3
+- google.ua    -->  PROV2 fa0/4
+----------------------------------------
+- PROV  gi0/1  -->  GW01    gi0/0     VLAN 5
+- PROV  gi0/2  -->  GW02    gi0/0     VLAN 5
+- PROV  fa0/1  -->  MGMT3   fa0       VLAN 5
+- PROV  fa0/24 -->  PROV_GW gi0/0     VLAN 6
+
+- PROV2 gi0/1  -->  PROV_GW   gi0/1 VLAN 6
+- PROV2 fa0/1  -->  bank1.ua  fa0
+- PROV2 fa0/2  -->  bank2.ua  fa0
+- PROV2 fa0/3  -->  db.ua     fa0
+- PROV2 fa0/4  -->  google.ua fa0
+----------------------------------------
+- PROW_GW gi0/1  -->  PROV2     gi0/1
+- PROW_GW gi0/0  -->  PROV      fa0/24
 ```
 
 ## IP
 
-```vscode-cisco-syntax
+```cisco
 
-- PC01         IP 10.0.0.2 MASK: 255.255.255.0   GW 10.0.0.1 
-- PC02         IP 10.0.0.3 MASK: 255.255.255.0   GW 10.0.0.1 
-- PC03         IP 10.0.0.4 MASK: 255.255.255.0   GW 10.0.0.1
-- PC04         IP 10.0.5.2 MASK: 255.255.255.0   GW 10.0.5.1
-- SVR01        IP 10.0.1.2 MASK: 255.255.255.0   GW 10.0.1.1 
-- SVR02        IP 10.0.1.3 MASK: 255.255.255.0   GW 10.0.1.1 
-- SVR03        IP 10.0.1.4 MASK: 255.255.255.0   GW 10.0.1.1 
-- SVR04        IP 10.0.6.2 MASK: 255.255.255.0   GW 10.0.6.1
-- SVR05        IP 10.0.1.5 MASk: 255.255.255.0   GW 10.0.1.1
-- SW01         IP 10.0.2.2 MASK: 255.255.255.0
-- SW02         IP 10.0.2.3 MASK: 255.255.255.0
-- SW03         IP 10.0.2.6 MASK: 244.255.255.0
-- GW01 gi0/0.5 IP 10.0.3.2 MASK: 255.255.255.248
-- GW02 gi0/0.5 IP 10.0.3.3 MASK: 255.255.255.248
-- MGMT1        IP 10.0.2.4 MASK: 255.255.255.0   GW 10.0.2.1 
-- MGMT2        IP 10.0.2.5 MASK: 255.255.255.0   GW 10.0.2.1
-- MGMT3        IP 10.0.3.4 MASK: 255.255.255.248
-- PROV         IP 10.0.3.1 MASK: 255.255.255.248 
+- PC01         IP 10.0.0.2  MASK: 255.255.255.0   GW 10.0.0.1
+- PC02         IP 10.0.0.3  MASK: 255.255.255.0   GW 10.0.0.1
+- PC03         IP 10.0.0.4  MASK: 255.255.255.0   GW 10.0.0.1
+- PC04         IP 10.0.5.2  MASK: 255.255.255.0   GW 10.0.5.1
+
+- MGMT1        IP 10.0.2.4  MASK: 255.255.255.0   GW 10.0.2.1
+- MGMT2        IP 10.0.2.5  MASK: 255.255.255.0   GW 10.0.2.1
+- MGMT3        IP 10.0.3.4  MASK: 255.255.255.248
+------------------------------------------------------------
+- SVR01        IP 10.0.1.2  MASK: 255.255.255.0   GW 10.0.1.1
+- SVR02        IP 10.0.1.3  MASK: 255.255.255.0   GW 10.0.1.1
+- SVR03        IP 10.0.1.4  MASK: 255.255.255.0   GW 10.0.1.1
+- SVR04        IP 10.0.6.2  MASK: 255.255.255.0   GW 10.0.6.1
+- SVR05        IP 10.0.1.5  MASk: 255.255.255.0   GW 10.0.1.1
+------------------------------------------------------------
+- SW01         IP 10.0.2.2  MASK: 255.255.255.0
+- SW02         IP 10.0.2.3  MASK: 255.255.255.0
+- SW03         IP 10.0.2.6  MASK: 244.255.255.0
+------------------------------------------------------------
+- GW01 gi0/0.5 IP 10.0.3.2  MASK: 255.255.255.248
+- GW01 gi0/0.6 IP 198.0.0.2 MASK: 255.255.255.240
+- GW01 gi0/1.2 IP 10.0.0.1  MASK: 255.255.255.0
+- GW01 gi0/1.3 IP 10.0.1.1  MASK: 255.255.255.0
+- GW01 gi0/1.4 IP 10.0.2.1  MASK: 255.255.255.0
+
+- GW02 gi0/0.5 IP 10.0.3.3  MASK: 255.255.255.248
+- GW02 gi0/1.2 IP 10.0.5.1  MASK: 255.255.255.0
+- GW02 gi0/1.3 IP 10.0.6.1  MASK: 255.255.255.0
+------------------------------------------------------------
+- PROV            IP 10.0.3.1  MASK: 255.255.255.248
+- PROV_GW gi0/0.6 IP 198.0.0.1 MASK: 255.255.255.240
+- PROV_GW gi0/1   IP 200.0.0.1 MASK: 255.255.255.0
+- PROV2
+- bank1.ua        IP 200.0.0.2 MASK: 255.255.255.0 GW 200.0.0.1
+- bank2.ua        IP 200.0.0.3 MASK: 255.255.255.0 GW 200.0.0.1
+- db.ua           IP 200.0.0.4 MASK: 255.255.255.0 GW 200.0.0.1
+- google.ua       IP 200.0.0.5 MASK: 255.255.255.0 GW 200.0.0.1
+
 ```
 
 ## NETWORKS (SUBNETS)
@@ -73,6 +126,8 @@
 
 - NET1 10.0.0.0/22
 - NET2 10.0.5.0/23
+- NET_PROV 200.0.0.0/24
+- NET_WAN 198.0.0.0/28
 
 ## VLANS
 
@@ -80,236 +135,4 @@
 - 3 - SVR
 - 4 - MGMT
 - 5 - N1N2
-
-## SW01
-
-```vscode-cisco-syntax
-
-Set SW01 hostname to SW01
-Create VLAN 2 name PC and VLAN 3 name SVR and vlan 4 name MGMT
-Set spanning-tree mode rapid-pvst
-
-interface vlan 4
-Description MGMT
-ip 10.0.2.2 mask: 255.255.255.0
-
-interface fa0/1
-Description PC01
-access
-VLAN 2
-
-interface fa0/2
-Description PC02
-access
-VLAN 2
-
-interface fa0/3
-Description SVR01
-access
-VLAN 3
-
-interface fa0/3
-Description SVR02
-access
-VLAN 3
-
-interface fa0/23
-Description SW03
-trunk
-VLAN 2,3,4
-
-interface fa0/24
-Description MGMT
-access
-VLAN 4
-
-interface gi0/1
-Description GW01
-trunk
-VLAN 2,3,4
-
-interface gi0/2
-Description GW01
-trunk
-VLAN 2,3,4
-
-```
-
-## SW02
-
-```vscode-cisco-syntax
-Set SW02 hostname to SW02
-Create VLAN 2 name PC and VLAN 3 name SVR and vlan 4 name MGMT
-Set spanning-tree mode rapid-pvst
-
-interface vlan 4
-Description MGMT
-ip 10.0.2.3 mask: 255.255.255.0
-
-interface gi0/2
-Description GW01
-trunk
-VLAN 2,3,4
-
-interface gi0/1
-Description SW03
-trunk
-VLAN 3,4
-
-interface fa0/1
-Description PC03
-access
-VLAN 2
-
-interface fa0/2
-Description SVR03
-access
-VLAN 3
-
-interface fa0/24
-Description MGMT
-access
-VLAN 4
-
-```
-
-## SW03
-
-```vscode-cisco-syntax
-Set SW03 hostname to SW03
-Create VLAN 3 name SVR and vlan 4 name MGMT
-Set spanning-tree mode rapid-pvst
-
-interface gi0/1
-Description SW02
-trunk
-VLAN 3,4
-
-interface fa0/1
-Description SVR05
-access
-VLAN 3
-
-interface fa0/24
-Description SW01
-trunk
-VLAN 2,3,4
-
-```
-
-## SW04
-
-```vscode-cisco-syntax
-Set SW04 hostname to SW04
-Create VLAN 2 name PC and VLAN 3 name SVR
-Set spanning-tree mode rapid-pvst
-
-interface gi0/1
-Description GW02
-trunk
-VLAN 2,3
-
-interface fa0/1
-Description PC04
-access
-VLAN 2
-
-interface fa0/2
-Description SVR04
-access
-VLAN 3
-```
-
-## PROV
-
-```vscode-cisco-syntax
-Set PROV name to PROV
-Create VLAN 5 name N1N2
-Set spanning-tree mode rapid-pvst
-
-interface gi0/1
-Description GW01
-access
-VLAN 5
-
-interface gi0/2
-Description GW02
-access
-VLAN 5
-
-interface fa0/1
-Description MGMT3
-access
-VLAN 5
-```
-
-## GW01
-
-- L - local
-- C - connected
-- S - static
-- R- RIP
-- M - mobile
-
-```cisco
-Set GW01 hostname to GW01
-Set time
-
-Create extended access-list Servers-out
-permit icmp any any
-permit tcp any host 10.0.1.2 eq www
-permit tcp any host 10.0.1.2 eq 443
-permit tcp any host 10.0.1.4 eq ftp
-permit tcp any host 10.0.1.3 eq smtp
-permit tcp any host 10.0.1.3 eq pop3
-permit tcp any host 10.0.1.5 eq domain
-permit tcp host 10.0.0.10 host 10.0.1.2 eq telnet
-permit tcp host 10.0.0.10 host 10.0.1.3 eq telnet
-permit tcp host 10.0.0.10 host 10.0.1.4 eq telnet
-permit tcp host 10.0.0.10 host 10.0.1.5 eq telnet
-permit tcp host 10.0.0.10 host 10.0.1.1 range 20 ftp
-permit tcp host 10.0.0.10 host 10.0.1.2 range 20 ftp
-permit tcp host 10.0.0.10 host 10.0.1.3 range 20 ftp
-permit tcp host 10.0.0.10 host 10.0.1.4 range 20 ftp
-permit tcp host 10.0.0.10 host 10.0.1.5 range 20 ftp
-Create standard access-list 50
-permit host 10.0.0.10
-
-interface gi0/0.5
-Description N1N2
-ip 10.0.3.2 mask: 255.255.255.248
-
-interface gi0/1.2
-Description PC
-ip 10.0.0.1 mask: 255.255.255.0
-Add ACL 50 in
-
-interface gi0/1.3
-Description SVR
-ip 10.0.2.1 mask: 255.255.255.0
-Add ACL Servers-out out
-
-interface gi0/1.4
-Description MGMT
-ip 10.0.3.1 mask: 255.255.255.0
-```
-
-## GW02
-
-```vscode-cisco-syntax
-
-Set GW02 hostname to GW02
-Set time
-
-interface gi0/0.5 
-Description N1N2
-ip 10.0.3.3 mask: 255.255.255.248
-
-interface gi0/1.2
-Description PC
-ip 10.0.5.1 mask: 255.255.255.0
-
-interface gi0/1.3
-Description SVR
-ip 10.0.6.1 mask: 255.255.255.0
-```
+- 6 - INET
