--- a/NETWORK/LAB02_2017_10_27_log.md
+++ b/NETWORK/LAB02_2017_10_27_log.md
@@ -9,6 +9,7 @@
 - PC02  fa0    -->  SW01  fa0/2  VLAN 2
 - PC03  fa0    -->  SW02  fa0/1  VLAN 2
 - PC04  fa0    -->  SW04  fa0/1  VLAN 2
+- PC05  fa0    -->  SW01  fa0/5  VLAN 2
 
 - MGMT1 fa0    -->  SW01  fa0/24 VLAN 4
 - MGMT2 fa0    -->  SW02  fa0/24 VLAN 4
@@ -28,6 +29,7 @@
 - SW01  fa0/2  -->  PC02  fa0    VLAN 2
 - SW01  fa0/3  -->  SVR01 fa0    VLAN 3
 - SW01  fa0/4  -->  SVR02 fa0    VLAN 3
+- SW01  fa0/5  -->  PC05  fa0    VLAN 2
 - SW01  fa0/10 -->  ADMIN fa0    VLAN 2
 - SW01  fa0/24 -->  MGMT1 fa0    VLAN 4
 
@@ -75,14 +77,17 @@
 
 ```cisco
 
-- PC01         IP 10.0.0.2  MASK: 255.255.255.0   GW 10.0.0.1
-- PC02         IP 10.0.0.3  MASK: 255.255.255.0   GW 10.0.0.1
-- PC03         IP 10.0.0.4  MASK: 255.255.255.0   GW 10.0.0.1
-- PC04         IP 10.0.5.2  MASK: 255.255.255.0   GW 10.0.5.1
+- PC01         IP 10.0.0.2  MASK: 255.255.255.0   GW 10.0.0.1  DNS: 10.0.1.5
+- PC02         IP 10.0.0.3  MASK: 255.255.255.0   GW 10.0.0.1  DNS: 10.0.1.5
+- PC03         IP 10.0.0.4  MASK: 255.255.255.0   GW 10.0.0.1  DNS: 10.0.1.5
+- PC04         IP 10.0.5.2  MASK: 255.255.255.0   GW 10.0.5.1  DNS: 10.0.1.5
+- PC05         IP 10.0.0.5  MASK: 255.255.255.0   GW 10.0.0.1
 
-- MGMT1        IP 10.0.2.4  MASK: 255.255.255.0   GW 10.0.2.1
+- MGMT1        IP 10.0.2.4  MASK: 255.255.255.0   GW 10.0.2.1  DNS: 10.0.1.5
 - MGMT2        IP 10.0.2.5  MASK: 255.255.255.0   GW 10.0.2.1
 - MGMT3        IP 10.0.3.4  MASK: 255.255.255.248
+
+- ADMIN        IP 10.0.0.10 MASK: 255.255.255.0   GW 10.0.0.1  DNS: 10.0.1.5
 ------------------------------------------------------------
 - SVR01        IP 10.0.1.2  MASK: 255.255.255.0   GW 10.0.1.1
 - SVR02        IP 10.0.1.3  MASK: 255.255.255.0   GW 10.0.1.1
@@ -136,3 +141,17 @@
 - 4 - MGMT
 - 5 - N1N2
 - 6 - INET
+
+## NAT
+
+MGMT  - disable Internet +
+PC    - access to db.ua  +
+PC05  - access to bank1.ua, bank2.ua + 
+ADMIN - access to Internet +
+
+SVR01 (WEB)   port 80
+SVR02 (MAIL)  port 25, 110
+SVR03 (SHARE) port ftp
+SVR04 (SHARE) port ftp
+
+ADMIN - access from Internet via RDP
