Setup port forwarding

--- a/NETWORK/LAB02_2017_10_27_log.md
+++ b/NETWORK/LAB02_2017_10_27_log.md
@@ -149,9 +149,9 @@ PC    - access to db.ua  +
 PC05  - access to bank1.ua, bank2.ua + 
 ADMIN - access to Internet +
 
-SVR01 (WEB)   port 80
-SVR02 (MAIL)  port 25, 110
-SVR03 (SHARE) port ftp
-SVR04 (SHARE) port ftp
+SVR01 (WEB)   port 80            198.0.0.5 --> 10.0.1.2 80
+SVR02 (MAIL)  port 25, 110       198.0.0.6 --> 10.0.1.3 25 10.0.1.3 110
+SVR03 (SHARE) port ftp           198.0.0.7 --> 10.0.1.4 ftp (20, 21)
+SVR04 (SHARE) port ftp           198.0.0.8 --> 10.0.6.2 ftp (20, 21)
 
-ADMIN - access from Internet via RDP
+ADMIN - access from Internet via RDP   198.0.0.9 --> 10.0.0.10 3389
