--- a/NETWORK/LAB02_2017_10_27_log.md
+++ b/NETWORK/LAB02_2017_10_27_log.md
@@ -10,6 +10,7 @@
 - PC03  fa0    -->  SW02  fa0/1  VLAN 2
 - PC04  fa0    -->  SW04  fa0/1  VLAN 2
 - PC05  fa0    -->  SW01  fa0/5  VLAN 2
+- PC06  fa0    -->  SW05  fa0/1  VLAN 2
 
 - MGMT1 fa0    -->  SW01  fa0/24 VLAN 4
 - MGMT2 fa0    -->  SW02  fa0/24 VLAN 4
@@ -44,6 +45,9 @@
 - SW04  gi0/1  -->  GW02  gi0/1  VLAN 2,3
 - SW04  fa0/1  -->  PC04  fa0    VLAN 2
 - SW04  fa0/2  -->  SVR04 fa0    VLAN 3
+
+- SW05  gi0/1  -->  GW05  gi0/2  VLAN 2,3
+- SW05  fa0/1  -->  PC06  fa0    VLAN 2
 ----------------------------------------
 - GW01  gi0/1  -->  SW01  gi0/1
 - GW01  gi0/0  -->  PROV  gi0/1
@@ -53,7 +57,13 @@
 - GW02  gi0/1  -->  SW04  gi0/1
 
 - GW03  gi0/0  -->  GW01  gi0/2
-- GW03  gi0/1  -->  GW03  gi0/0
+- GW03  gi0/1  -->  GW04  gi0/0
+- GW03  gi0/2  -->  GW05  gi0/0
+
+- GW04  gi0/0  -->  GW03  gi0/1
+
+- GW05  gi0/0  -->  GW03  gi0/2
+- GW05  gi0/2  -->  SW05  gi0/1
 
 ----------------------------------------
 ----------------------------------------
@@ -87,6 +97,7 @@
 - PC03         IP 10.0.0.4  MASK: 255.255.255.0   GW 10.0.0.1  DNS: 10.0.1.5
 - PC04         IP 10.0.5.2  MASK: 255.255.255.0   GW 10.0.5.1  DNS: 10.0.1.5
 - PC05         IP 10.0.0.5  MASK: 255.255.255.0   GW 10.0.0.1
+- PC06         IP 10.0.8.2  MASK: 255.255.255.0   GW 10.0.8.1
 
 - MGMT1        IP 10.0.2.4  MASK: 255.255.255.0   GW 10.0.2.1  DNS: 10.0.1.5
 - MGMT2        IP 10.0.2.5  MASK: 255.255.255.0   GW 10.0.2.1
@@ -104,15 +115,35 @@
 - SW02         IP 10.0.2.3  MASK: 255.255.255.0
 - SW03         IP 10.0.2.6  MASK: 244.255.255.0
 ------------------------------------------------------------
-- GW01 gi0/0.5 IP 10.0.3.2  MASK: 255.255.255.248
-- GW01 gi0/0.6 IP 198.0.0.2 MASK: 255.255.255.240
-- GW01 gi0/1.2 IP 10.0.0.1  MASK: 255.255.255.0
-- GW01 gi0/1.3 IP 10.0.1.1  MASK: 255.255.255.0
-- GW01 gi0/1.4 IP 10.0.2.1  MASK: 255.255.255.0
+- GW01 gi0/0.5 IP 10.0.3.2   MASK: 255.255.255.248
+- GW01 gi0/0.6 IP 198.0.0.2  MASK: 255.255.255.240
+- GW01 gi0/1.2 IP 10.0.0.1   MASK: 255.255.255.0
+- GW01 gi0/1.3 IP 10.0.1.1   MASK: 255.255.255.0
+- GW01 gi0/1.4 IP 10.0.2.1   MASK: 255.255.255.0
+- GW01 gi0/2.5 IP 10.0.3.10  MASK: 255.255.255.252
+- GW01 loop       10.0.255.4 MASK: 255.255.255.255
 
-- GW02 gi0/0.5 IP 10.0.3.3  MASK: 255.255.255.248
-- GW02 gi0/1.2 IP 10.0.5.1  MASK: 255.255.255.0
-- GW02 gi0/1.3 IP 10.0.6.1  MASK: 255.255.255.0
+- GW02 gi0/0.5 IP 10.0.3.3   MASK: 255.255.255.248
+- GW02 gi0/1.2 IP 10.0.5.1   MASK: 255.255.255.0
+- GW02 gi0/1.3 IP 10.0.6.1   MASK: 255.255.255.0
+- GW02 loop    IP 10.0.255.5 MASK: 255.255.255.252
+
+- GW03 gi0/0.5 IP 10.0.3.9   MASK: 255.255.255.252
+- GW03 gi0/1.5 IP 10.0.3.13  MASK: 255.255.255.252
+- GW03 gi0/2.5 IP 10.0.3.22  MASK: 255.255.255.252
+- GW03 loop    IP 10.0.255.1 MASK: 255.255.255.255
+
+- GW04 gi0/0.5 IP 10.0.3.14  MASK: 255.255.255.252
+- GW04 gi0/1.5 IP 10.0.3.17  MASK: 255.255.255.252
+- GW04 gi0/2.5 IP 10.0.3.25  MASK: 255.255.255.252
+- GW04 loop    IP 10.0.255.2 MASK: 255.255.255.255
+
+- GW05 gi0/0.5 IP 10.0.3.21  MASK: 255.255.255.252
+- GW05 gi0/1.5 IP 10.0.3.18  MASK: 255.255.255.252
+- GW05 gi0/2.2 IP 10.0.8.1   MASK: 255.255.255.0
+- GW05 gi0/2.3 IP 10.0.9.1   MASK: 255.255.255.0
+- GW05 loop    IP 10.0.255.3 MASK: 255.255.255.255
+
 ------------------------------------------------------------
 - PROV            IP 10.0.3.1  MASK: 255.255.255.248
 - PROV_GW gi0/0.6 IP 198.0.0.1 MASK: 255.255.255.240
@@ -122,7 +153,7 @@
 - bank2.ua        IP 200.0.0.3 MASK: 255.255.255.0 GW 200.0.0.1
 - db.ua           IP 200.0.0.4 MASK: 255.255.255.0 GW 200.0.0.1
 - google.ua       IP 200.0.0.5 MASK: 255.255.255.0 GW 200.0.0.1
- 
+
 ```
 
 ## NETWORKS (SUBNETS)
@@ -130,12 +161,19 @@
 - 10.0.0.0/24 - PC
 - 10.0.1.0/24 - SVR
 - 10.0.2.0/24 - MGMT
-- 10.0.3.0/29 - N1N2
+- 10.0.3.0/29 - N1N2 (GW01 - PROV - GW02) 
 - 10.0.5.0/24 - PC
 - 10.0.6.0/24 - SVR
 
+- 10.0.3.8/30  - GW01 - GW03
+- 10.0.3.12/30 - GW03 - GW04
+- 10.0.3.16/30 - GW04 - GW06
+- 10.0.3.20/30 - GW03 - GW05
+- 10.0.3.24/30 - GW05 - GW06
+
 - NET1 10.0.0.0/22
 - NET2 10.0.5.0/23
+- NET3 10.0.8.0/23
 - NET_PROV 200.0.0.0/24
 - NET_WAN 198.0.0.0/28
 
@@ -144,15 +182,15 @@
 - 2 - PC
 - 3 - SVR
 - 4 - MGMT
-- 5 - N1N2
+- 5 - N1N2 (all gateways)
 - 6 - INET
 
 ## NAT
 
-MGMT  - disable Internet +
-PC    - access to db.ua  +
-PC05  - access to bank1.ua, bank2.ua + 
-ADMIN - access to Internet +
+MGMT  - disable Internet
+PC    - access to db.ua
+PC05  - access to bank1.ua, bank2.ua
+ADMIN - access to Internet
 
 SVR01 (WEB)   port 80            198.0.0.5 --> 10.0.1.2 80
 SVR02 (MAIL)  port 25, 110       198.0.0.6 --> 10.0.1.3 25 10.0.1.3 110
