--- a/NETWORK/LAB02_2017_10_27_log.md
+++ b/NETWORK/LAB02_2017_10_27_log.md
@@ -174,6 +174,7 @@
 - NET1 10.0.0.0/22
 - NET2 10.0.5.0/23
 - NET3 10.0.8.0/23
+- NET4 10.0.10.0/23
 - NET_PROV 200.0.0.0/24
 - NET_WAN 198.0.0.0/28
 
